--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -272,14 +272,14 @@
 
 <h2>Input group sizes</h2>
 
-<div class="input-group input-group-xl">
+<div class="input-group input-group-xlarge">
   <span class="input-group-addon" id="sizing-addon-n1">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n1">
   <span class="input-group-btn">
       <button class="btn" type="button">Go!</button>
   </span>
 </div>
-<div class="input-group input-group-lg">
+<div class="input-group input-group-large">
   <span class="input-group-addon" id="sizing-addon-n2">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n2">
   <span class="input-group-btn">
@@ -293,14 +293,14 @@
       <button class="btn" type="button">Go!</button>
   </span>
 </div>
-<div class="input-group input-group-sm">
+<div class="input-group input-group-small">
   <span class="input-group-addon" id="sizing-addon-n4">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n4">
   <span class="input-group-btn">
       <button class="btn" type="button">Go!</button>
   </span>
 </div>
-<div class="input-group input-group-xs">
+<div class="input-group input-group-xsmall">
   <span class="input-group-addon" id="sizing-addon-n5">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n5">
   <span class="input-group-btn">
@@ -310,7 +310,7 @@
 
 <h2>Input group size w/ select</h2>
 
-<div class="input-group input-group-xl">
+<div class="input-group input-group-xlarge">
     <select class="form-control" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -321,7 +321,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-lg">
+<div class="input-group input-group-large">
     <select class="form-control" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -343,7 +343,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-sm">
+<div class="input-group input-group-small">
     <select class="form-control" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -354,7 +354,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-xs">
+<div class="input-group input-group-xsmall">
     <select class="form-control" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -368,7 +368,7 @@
 
 <h2>Input group size w/ Custom select</h2>
 
-<div class="input-group input-group-xl">
+<div class="input-group input-group-xlarge">
     <select class="custom-select" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -379,7 +379,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-lg">
+<div class="input-group input-group-large">
     <select class="custom-select" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -401,7 +401,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-sm">
+<div class="input-group input-group-small">
     <select class="custom-select" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
@@ -412,7 +412,7 @@
         <button class="btn" type="button">Go!</button>
     </span>
 </div>
-<div class="input-group input-group-xs">
+<div class="input-group input-group-xsmall">
     <select class="custom-select" aria-label="Select one">
         <option selected>Choose...</option>
         <option value="1">One</option>
