--- a/test/visual/pagination.html
+++ b/test/visual/pagination.html
@@ -118,7 +118,7 @@
 
     <h2>Sizes</h2>
     <nav aria-label="Page navigation">
-        <ul class="pagination pagination-group pagination-xs">
+        <ul class="pagination pagination-group pagination-xsmall">
             <li class="page-item">
                 <span class="page-link disabled">Previous</span>
             </li>
@@ -134,7 +134,7 @@
     </nav>
 
     <nav aria-label="Page navigation">
-        <ul class="pagination pagination-group pagination-sm">
+        <ul class="pagination pagination-group pagination-small">
             <li class="page-item">
                 <span class="page-link disabled">Previous</span>
             </li>
@@ -166,7 +166,7 @@
     </nav>
 
     <nav aria-label="Page navigation">
-        <ul class="pagination pagination-group pagination-lg">
+        <ul class="pagination pagination-group pagination-large">
             <li class="page-item">
                 <span class="page-link disabled">Previous</span>
             </li>
@@ -182,7 +182,7 @@
     </nav>
 
     <nav aria-label="Page navigation">
-        <ul class="pagination pagination-group pagination-xl">
+        <ul class="pagination pagination-group pagination-xlarge">
             <li class="page-item">
                 <span class="page-link disabled">Previous</span>
             </li>
