--- a/test/visual/switch.html
+++ b/test/visual/switch.html
@@ -100,28 +100,28 @@
 <h2>Sizing</h2>
 
 <div class="form-group form-inline">
-    <label class="switch switch-xs me-1">
+    <label class="switch switch-xsmall me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description me-0_25">.switch-xs</span>
+        <span class="switch-description me-0_25">.switch-xsmall</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-xs me-1">
+    <label class="switch switch-rounded switch-xsmall me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
-    <input type="text" class="form-control form-control-xs" placeholder=".form-control-xs" />
+    <input type="text" class="form-control form-control-xsmall" placeholder=".form-control-xsmall" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-sm me-1">
+    <label class="switch switch-small me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description me-0_25">.switch-sm</span>
+        <span class="switch-description me-0_25">.switch-small</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-sm me-1">
+    <label class="switch switch-rounded switch-small me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
-    <input type="text" class="form-control form-control-sm" placeholder=".form-control-sm" />
+    <input type="text" class="form-control form-control-small" placeholder=".form-control-small" />
 </div>
 <div class="form-group form-inline">
     <label class="switch me-1">
@@ -136,28 +136,28 @@
     <input type="text" class="form-control" placeholder="Default .form-control" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-lg me-1">
+    <label class="switch switch-large me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description me-0_25">.switch-lg</span>
+        <span class="switch-description me-0_25">.switch-large</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-lg me-1">
+    <label class="switch switch-rounded switch-large me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
-    <input type="text" class="form-control form-control-lg" placeholder=".form-control-lg" />
+    <input type="text" class="form-control form-control-large" placeholder=".form-control-large" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-xl me-1">
+    <label class="switch switch-xlarge me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description me-0_25">.switch-xl</span>
+        <span class="switch-description me-0_25">.switch-xlarge</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-xl me-1">
+    <label class="switch switch-rounded switch-xlarge me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
-    <input type="text" class="form-control form-control-xl" placeholder=".form-control-xl" />
+    <input type="text" class="form-control form-control-xlarge" placeholder=".form-control-xlarge" />
 </div>
 
 <h2>Colors</h2>
