--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1161,9 +1161,9 @@ Showing a <kbd>kdb sample</kbd>
 <input class="form-control" type="text" placeholder="Readonly input here&hellip;" readonly>
 
 <h3>Input sizing</h3>
-<input class="form-control form-control-lg" type="text" placeholder=".form-control-lg">
+<input class="form-control form-control-large" type="text" placeholder=".form-control-large">
 <input class="form-control" type="text" placeholder="Default input">
-<input class="form-control form-control-sm" type="text" placeholder=".form-control-sm">
+<input class="form-control form-control-small" type="text" placeholder=".form-control-small">
 <select class="form-control form-control-lg">
     <option>1</option>
     <option>2</option>
@@ -1178,7 +1178,7 @@ Showing a <kbd>kdb sample</kbd>
     <option>4</option>
     <option>5</option>
 </select>
-<select class="form-control form-control-sm">
+<select class="form-control form-control-small">
     <option>1</option>
     <option>2</option>
     <option>3</option>
@@ -1190,15 +1190,15 @@ Showing a <kbd>kdb sample</kbd>
 <div class="select-sizing">
     <form class="row">
       <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-xs">Test</button>
+        <button type="button" class="btn btn-primary btn-xsmall">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput2" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xs" id="formGroupExampleInput2" placeholder="Example input">
+        <input type="text" class="form-control form-control-xsmall" id="formGroupExampleInput2" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect2" class="sr-only">Example select</label>
-        <select class="form-control form-control-xs" id="exampleSelect2">
+        <select class="form-control form-control-xsmall" id="exampleSelect2">
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -1209,15 +1209,15 @@ Showing a <kbd>kdb sample</kbd>
     </form>
     <form class="row">
       <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-sm">Test</button>
+        <button type="button" class="btn btn-primary btn-small">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput3" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-sm" id="formGroupExampleInput3" placeholder="Example input">
+        <input type="text" class="form-control form-control-small" id="formGroupExampleInput3" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect3" class="sr-only">Example select</label>
-        <select class="form-control form-control-sm" id="exampleSelect3">
+        <select class="form-control form-control-small" id="exampleSelect3">
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -1247,7 +1247,7 @@ Showing a <kbd>kdb sample</kbd>
     </form>
     <form class="row">
       <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-lg">Test</button>
+        <button type="button" class="btn btn-primary btn-large">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput5" class="sr-only">Example label</label>
@@ -1266,15 +1266,15 @@ Showing a <kbd>kdb sample</kbd>
     </form>
     <form class="row">
       <div class="col-md-2 text-end">
-        <button type="button" class="btn btn-primary btn-xl">Test</button>
+        <button type="button" class="btn btn-primary btn-xlarge">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput6" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xl" id="formGroupExampleInput6" placeholder="Example input">
+        <input type="text" class="form-control form-control-xlarge" id="formGroupExampleInput6" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect6" class="sr-only">Example select</label>
-        <select class="form-control form-control-xl" id="exampleSelect6">
+        <select class="form-control form-control-xlarge" id="exampleSelect6">
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -1508,100 +1508,6 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 </div>
 
-<h3>Button group</h3>
-<div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-
-<h3>Button toolbar</h3>
-<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group me-0_5" role="group" aria-label="First group">
-    <button type="button" class="btn">1</button>
-    <button type="button" class="btn">2</button>
-    <button type="button" class="btn">3</button>
-    <button type="button" class="btn">4</button>
-  </div>
-  <div class="btn-group me-0_5" role="group" aria-label="Second group">
-    <button type="button" class="btn">5</button>
-    <button type="button" class="btn">6</button>
-    <button type="button" class="btn">7</button>
-  </div>
-  <div class="btn-group" role="group" aria-label="Third group">
-    <button type="button" class="btn">8</button>
-  </div>
-</div>
-<br />
-
-<h3>Button group sizes</h3>
-<div class="btn-group btn-group-xl" role="group" aria-label="Extra large button group">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-<div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-<div class="btn-group" role="group" aria-label="Standard button group">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-<div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-<div class="btn-group btn-group-xs" role="group" aria-label="Extra small button group">
-  <button type="button" class="btn">Left</button>
-  <button type="button" class="btn">Middle</button>
-  <button type="button" class="btn">Right</button>
-</div>
-<br />
-
-<h3>Nested button group</h3>
-<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  <button type="button" class="btn btn-secondary">1</button>
-  <button type="button" class="btn btn-secondary">2</button>
-
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-      Dropdown
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Dropdown link</a></li>
-      <li><a href="#">Dropdown link</a></li>
-    </ul>
-  </div>
-
-  <button type="button" class="btn btn-secondary">Caret <span class="caret ms-0_25" aria-hidden="true"></span></button>
-</div>
-<br />
-
-<h3>Vertical button group</h3>
-<div class="btn-group-vertical" role="group" aria-label="Basic example">
-  <button type="button" class="btn">Top</button>
-  <button type="button" class="btn">Middle</button>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
-      Dropdown
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Dropdown link</a></li>
-      <li><a href="#">Dropdown link</a></li>
-    </ul>
-  </div>
-  <button type="button" class="btn">Bottom</button>
-</div>
-<br />
 
 <h3>Input groups</h3>
 <div class="input-group">
@@ -1627,12 +1533,12 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Input group sizes</h3>
-<div class="input-group input-group-xl">
+<div class="input-group input-group-xlarge">
   <span class="input-group-addon" id="sizing-addon1">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon1">
 </div>
 <br />
-<div class="input-group input-group-lg">
+<div class="input-group input-group-large">
   <span class="input-group-addon" id="sizing-addon2">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon2">
 </div>
@@ -1642,12 +1548,12 @@ Showing a <kbd>kdb sample</kbd>
   <input type="text" class="form-control" placeholder="Username"aria-label="Username" aria-describedby="sizing-addon3">
 </div>
 <br />
-<div class="input-group input-group-sm">
+<div class="input-group input-group-small">
   <span class="input-group-addon" id="sizing-addon4">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon4">
 </div>
 <br />
-<div class="input-group input-group-xs">
+<div class="input-group input-group-xsmall">
   <span class="input-group-addon" id="sizing-addon5">@</span>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon5">
 </div>
@@ -1888,7 +1794,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Pagination sizes</h3>
 <nav aria-label="...">
-  <ul class="pagination pagination-xl">
+  <ul class="pagination pagination-xlarge">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
@@ -1951,7 +1857,7 @@ Showing a <kbd>kdb sample</kbd>
   </ul>
 </nav>
 <nav aria-label="...">
-  <ul class="pagination pagination-sm">
+  <ul class="pagination pagination-small">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
@@ -1972,7 +1878,7 @@ Showing a <kbd>kdb sample</kbd>
   </ul>
 </nav>
 <nav aria-label="...">
-  <ul class="pagination pagination-xs">
+  <ul class="pagination pagination-xsmall">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
@@ -2859,7 +2765,7 @@ Showing a <kbd>kdb sample</kbd>
   <hr class="m-y-2">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-large" href="#" role="button">Learn more</a>
   </p>
 </div>
 
