--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -17,15 +17,17 @@
 <div class="container">
     <h1>Button Group</h1>
 
-    <div class="btn-group" role="group" aria-label="Basic example">
+    <h2>Basic</h2>
+
+    <div class="btn-group mb-1" role="group" aria-label="Basic example">
         <button type="button" class="btn">Left</button>
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
 
-    <hr />
+    <h2>Toolbar</h2>
 
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-toolbar mb-1" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
             <button type="button" class="btn">2</button>
@@ -33,18 +35,18 @@
             <button type="button" class="btn">4</button>
         </div>
         <div class="btn-group me-0_5" role="group" aria-label="Second group">
-            <button type="button" class="btn btn-primary">5</button>
-            <button type="button" class="btn btn-primary">6</button>
-            <button type="button" class="btn btn-primary">7</button>
+            <button type="button" class="btn">5</button>
+            <button type="button" class="btn">6</button>
+            <button type="button" class="btn">7</button>
         </div>
         <div class="btn-group" role="group" aria-label="Third group">
-            <button type="button" class="btn btn-danger">8</button>
+            <button type="button" class="btn">8</button>
         </div>
     </div>
 
-    <hr />
+    <h2>Vertical</h2>
 
-    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+    <div class="btn-group-vertical mb-1" role="group" aria-label="Vertical button group">
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
             <div class="btn-group" role="group">
@@ -87,9 +89,9 @@
         </div>
     </div>
 
-    <hr />
+    <h2>Checkbox Input</h2>
 
-    <div class="btn-group-vertical">
+    <div class="btn-group">
         <div class="btn-check">
             <input id="checkbox2" type="checkbox" class="btn-check-input" checked>
             <label for="checkbox2" class="btn btn-info">Check 1</label>
@@ -106,6 +108,23 @@
 
     <hr />
 
+    <div class="btn-group-vertical mb-1">
+        <div class="btn-check">
+            <input id="checkbox2" type="checkbox" class="btn-check-input" checked>
+            <label for="checkbox2" class="btn btn-info">Check 1</label>
+        </div>
+        <div class="btn-check">
+            <input id="checkbox3" type="checkbox" class="btn-check-input">
+            <label for="checkbox3" class="btn btn-info">Check 2</label>
+        </div>
+        <div class="btn-check">
+            <input id="checkbox4" type="checkbox" class="btn-check-input">
+            <label for="checkbox4" class="btn btn-info">Check 3</label>
+        </div>
+    </div>
+
+    <h2>with Input Group</h2>
+
     <div class="btn-toolbar mb-1" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
@@ -119,7 +138,7 @@
           </div>
     </div>
 
-    <hr />
+    <h2>Nested</h2>
 
     <div class="btn-group mb-1" role="group" aria-label="Button group with nested dropdown">
         <button type="button" class="btn">1</button>
@@ -135,7 +154,37 @@
             </ul>
         </div>
     </div>
+
+    <h2>Sizing</h2>
+    <div class="btn-group btn-group-xlarge mb-0_5" role="group" aria-label="Extra large button group">
+        <button type="button" class="btn">Left</button>
+        <button type="button" class="btn">Middle</button>
+        <button type="button" class="btn">Right</button>
+    </div>
     <br />
+    <div class="btn-group btn-group-large mb-0_5" role="group" aria-label="Large button group">
+        <button type="button" class="btn">Left</button>
+        <button type="button" class="btn">Middle</button>
+        <button type="button" class="btn">Right</button>
+    </div>
+    <br />
+    <div class="btn-group mb-0_5" role="group" aria-label="Standard button group">
+        <button type="button" class="btn">Left</button>
+        <button type="button" class="btn">Middle</button>
+        <button type="button" class="btn">Right</button>
+    </div>
+    <br />
+    <div class="btn-group btn-group-small mb-0_5" role="group" aria-label="Small button group">
+        <button type="button" class="btn">Left</button>
+        <button type="button" class="btn">Middle</button>
+        <button type="button" class="btn">Right</button>
+    </div>
+    <br />
+    <div class="btn-group btn-group-xsmall mb-0_5" role="group" aria-label="Extra small button group">
+        <button type="button" class="btn">Left</button>
+        <button type="button" class="btn">Middle</button>
+        <button type="button" class="btn">Right</button>
+    </div>
 
 </div>
 
