update doc classes

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1164,7 +1164,7 @@ Showing a <kbd>kdb sample</kbd>
 <input class="form-control form-control-large" type="text" placeholder=".form-control-large">
 <input class="form-control" type="text" placeholder="Default input">
 <input class="form-control form-control-small" type="text" placeholder=".form-control-small">
-<select class="form-control form-control-lg">
+<select class="form-control form-control-large">
     <option>1</option>
     <option>2</option>
     <option>3</option>
@@ -1251,11 +1251,11 @@ Showing a <kbd>kdb sample</kbd>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput5" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-lg" id="formGroupExampleInput5" placeholder="Example input">
+        <input type="text" class="form-control form-control-large" id="formGroupExampleInput5" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect5" class="sr-only">Example select</label>
-        <select class="form-control form-control-lg" id="exampleSelect5">
+        <select class="form-control form-control-large" id="exampleSelect5">
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -1815,7 +1815,7 @@ Showing a <kbd>kdb sample</kbd>
   </ul>
 </nav>
 <nav aria-label="...">
-  <ul class="pagination pagination-lg">
+  <ul class="pagination pagination-large">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
