save in process work

--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -74,11 +74,10 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
+        <div class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Remember my preference</span>
-        </label>
+            <label class="custom-control-label">Remember my preference</label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
@@ -92,11 +91,10 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
+        <div class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Remember my preference</span>
-        </label>
+            <label class="custom-control-label">Remember my preference</label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
