--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1372,94 +1372,74 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Custom Forms: Checkbox</h3>
 <div class="mb-1">
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Check this custom checkbox</span>
-  </label>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="customControl0">
+    <label class="custom-control-label" for="customControl0">Check this custom checkbox</label>
+  </div>
 </div>
 
 <div class="mb-1">
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
-  </label>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="customControl1">
+    <label class="custom-control-label" for="customControl1">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  </div>
 </div>
 
 <h3>Custom Forms: Radio</h3>
 <div class="mb-1">
-  <label class="custom-control custom-radio">
-    <input id="radio1" name="radio" type="radio" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Toggle this custom radio</span>
-  </label>
-  <label class="custom-control custom-radio">
-    <input id="radio2" name="radio" type="radio" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Or toggle this other custom radio</span>
-  </label>
+  <div class="custom-control custom-radio">
+    <input name="radio" type="radio" class="custom-control-input" id="customControl2">
+    <label class="custom-control-label" for="customControl2">Toggle this custom radio</label>
+  </div>
+  <div class="custom-control custom-radio">
+    <input name="radio" type="radio" class="custom-control-input" id="customControl3">
+    <label class="custom-control-label" for="customControl3">Or toggle this other custom radio</label>
+  </div>
 </div>
 
 <h3>Custom Forms: Disabled</h3>
 <div class="mb-1">
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Check this custom checkbox</span>
-  </label>
-  <label class="custom-control custom-radio">
-    <input id="radioDisabled0" name="radioDisabled" type="radio" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Toggle this custom radio</span>
-  </label>
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Check this custom checkbox</span>
-  </label>
-  <label class="custom-control custom-radio">
-    <input id="radioDisabled1" name="radioDisabled" type="radio" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Toggle this custom radio</span>
-  </label>
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Check this custom checkbox</span>
-  </label>
-  <label class="custom-control custom-radio">
-    <input id="radioDisabled2" name="radioDisabled" type="radio" class="custom-control-input" disabled>
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Toggle this custom radio</span>
-  </label>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="customControl4" disabled>
+    <label class="custom-control-label" for="customControl4">Check this custom checkbox</label>
+  </div>
+  <div class="custom-control custom-radio">
+    <input name="radioDisabled0" type="radio" class="custom-control-input" id="customControl5" disabled>
+    <label class="custom-control-label" for="customControl5">Toggle this custom radio</label>
+  </div>
+</div>
+<div class="mb-1">
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="customControl6" checked disabled>
+    <label class="custom-control-label" for="customControl6">Check this custom checkbox</label>
+  </div>
+  <div class="custom-control custom-radio">
+    <input name="radioDisabled1" type="radio" class="custom-control-input" id="customControl7" checked disabled>
+    <label class="custom-control-label" for="customControl7">Toggle this custom radio</label>
+  </div>
 </div>
 
 <h3>Custom Forms: Stacked</h3>
 <div class="custom-controls-stacked mb-1">
-  <label class="custom-control custom-radio">
+  <div class="custom-control custom-radio">
     <input id="radioStacked1" name="radio-stacked" type="radio" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Toggle this custom radio</span>
-  </label>
-  <label class="custom-control custom-radio">
+    <label class="custom-control-label">Toggle this custom radio</label>
+  </div>
+  <div class="custom-control custom-radio">
     <input id="radioStacked2" name="radio-stacked" type="radio" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Or toggle this other custom radio</span>
-  </label>
+    <label class="custom-control-label">Or toggle this other custom radio</label>
+  </div>
 </div>
 
 <div class="custom-controls-stacked mb-1">
-  <label class="custom-control custom-radio">
+  <div class="custom-control custom-radio">
     <input id="checkStacked1" type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
-  </label>
-  <label class="custom-control custom-radio">
+    <label class="custom-control-label">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  </div>
+  <div class="custom-control custom-radio">
     <input id="checkStacked2" type="checkbox" class="custom-control-input">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
-  </label>
+    <label class="custom-control-label">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</label>
+  </div>
 </div>
 
 
@@ -1480,10 +1460,10 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Custom Forms: File Browser</h3>
 <div class="mb-1">
-  <label class="custom-file">
-    <input type="file" id="file" class="custom-file-input">
-    <span class="custom-file-control"></span>
-  </label>
+  <div class="custom-file">
+    <input type="file" class="custom-file-input" id="customFile">
+    <label class="custom-file-label" for="customFile">Choose file...</label>
+  </div>
 </div>
 
 <h3>Embed responsive</h3>
